tests/baselines/reference/impreciseNumericLiterals.errors.txt
tests/cases/compiler/impreciseNumericLiterals.ts(33,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
tests/cases/compiler/impreciseNumericLiterals.ts(34,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
tests/cases/compiler/impreciseNumericLiterals.ts(35,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
tests/cases/compiler/impreciseNumericLiterals.ts(36,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
tests/cases/compiler/impreciseNumericLiterals.ts(37,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
tests/cases/compiler/impreciseNumericLiterals.ts(38,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
tests/cases/compiler/impreciseNumericLiterals.ts(39,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
tests/cases/compiler/impreciseNumericLiterals.ts(40,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
tests/cases/compiler/impreciseNumericLiterals.ts(46,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
tests/cases/compiler/impreciseNumericLiterals.ts(47,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
tests/cases/compiler/impreciseNumericLiterals.ts(48,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
tests/cases/compiler/impreciseNumericLiterals.ts(49,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
tests/cases/compiler/impreciseNumericLiterals.ts(50,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
tests/cases/compiler/impreciseNumericLiterals.ts(51,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
tests/cases/compiler/impreciseNumericLiterals.ts(81,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
tests/cases/compiler/impreciseNumericLiterals.ts(82,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
tests/cases/compiler/impreciseNumericLiterals.ts(83,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
tests/cases/compiler/impreciseNumericLiterals.ts(84,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
tests/cases/compiler/impreciseNumericLiterals.ts(85,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
tests/cases/compiler/impreciseNumericLiterals.ts(86,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
tests/cases/compiler/impreciseNumericLiterals.ts(87,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
tests/cases/compiler/impreciseNumericLiterals.ts(88,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
tests/cases/compiler/impreciseNumericLiterals.ts(108,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
tests/cases/compiler/impreciseNumericLiterals.ts(109,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
tests/cases/compiler/impreciseNumericLiterals.ts(110,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
tests/cases/compiler/impreciseNumericLiterals.ts(111,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
tests/cases/compiler/impreciseNumericLiterals.ts(112,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
tests/cases/compiler/impreciseNumericLiterals.ts(113,1): error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.


==== tests/cases/compiler/impreciseNumericLiterals.ts (28 errors) ====
    1;
    -1;
    12;
    -12;
    123;
    -123;
    1234;
    -1234;
    12345;
    -12345;
    123456;
    -123456;
    1234567;
    -1234567;
    12345678;
    -12345678;
    123456789;
    -123456789;
    1234567890;
    -1234567890;
    12345678901;
    -12345678901;
    123456789012;
    -123456789012;
    1234567890123;
    -1234567890123;
    12345678901234;
    -12345678901234;
    123456789012345;
    -123456789012345;
    1234567890123456;
    -1234567890123456;
    12345678901234567;
    ~~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    -12345678901234567;
    ~~~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    123456789012345678;
    ~~~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    -123456789012345678;
    ~~~~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    1234567890123456789;
    ~~~~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    -1234567890123456789;
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    12345678901234567890;
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    -12345678901234567890;
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    
    9007199254740989;
    -9007199254740989;
    9007199254740990;
    -9007199254740990;
    9007199254740991;
    ~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    -9007199254740991;
    ~~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    9007199254740992;
    ~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    -9007199254740992;
    ~~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    9007199254740993;
    ~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    -9007199254740993;
    ~~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    
    0x1;
    -0x1;
    0x12;
    -0x12;
    0x123;
    -0x123;
    0x1234;
    -0x1234;
    0x12345;
    -0x12345;
    0x123456;
    -0x123456;
    0x1234567;
    -0x1234567;
    0x12345678;
    -0x12345678;
    0x123456789;
    -0x123456789;
    0x1234567890;
    -0x1234567890;
    0x12345678901;
    -0x12345678901;
    0x123456789012;
    -0x123456789012;
    0x1234567890123;
    -0x1234567890123;
    0x12345678901234;
    -0x12345678901234;
    0x123456789012345;
    ~~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    -0x123456789012345;
    ~~~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    0x1234567890123456;
    ~~~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    -0x1234567890123456;
    ~~~~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    0x12345678901234567;
    ~~~~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    -0x12345678901234567;
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    0x123456789012345678;
    ~~~~~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    -0x123456789012345678;
    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    0x1234567890123456789;
    -0x1234567890123456789;
    0x12345678901234567890;
    -0x12345678901234567890;
    0x123456789012345678901;
    -0x123456789012345678901;
    0x1234567890123456789012;
    -0x1234567890123456789012;
    0x12345678901234567890123;
    -0x12345678901234567890123;
    0x123456789012345678901234;
    -0x123456789012345678901234;
    0x1234567890123456789012345;
    -0x1234567890123456789012345;
    
    0x19999999999998;
    -0x19999999999998;
    0x19999999999999;
    -0x19999999999999;
    0x20000000000000;
    ~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    -0x20000000000000;
    ~~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    0x20000000000001;
    ~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    -0x20000000000001;
    ~~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    0x20000000000002;
    ~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    -0x20000000000002;
    ~~~~~~~~~~~~~~~~~
!!! error TS1357: Numeric literals with absolute values equal to 2^53 or greater are too large to be represented accurately as an integer.
    